k8s/overlays/dr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cinevision-dr
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: dr.cinevisionca.link
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
